rework heuristic execution: - client sends heuristic - server replies with workid specific to that heuristic - client can now request the created heuristic by workid - server replies with either with the heuristic or with an empty reply if it is not ready yet
