# backend/openapi/swagger.yaml
@@ -414,6 +414,25 @@ definitions:
       tag:
         type: string
     type: object
+  heuristics.DatabaseHeuristicRequest:
+    properties:
+      clusterTypes:
+        items:
+          $ref: '#/definitions/clustering.ClusterType'
+        type: array
+      excludeSpendingGaps:
+        type: boolean
+      parameter:
+        type: string
+      parentUID:
+        type: string
+      type:
+        type: string
+      uid:
+        type: string
+      useAddressExclusionList:
+        type: boolean
+    type: object
   heuristics.Descriptor:
     properties:
       category:
@@ -532,51 +551,10 @@ definitions:
       txhash:
         type: string
     type: object
-  heuristics.HeuristicQueueStatus:
-    enum:
-    - 0
-    - 1
-    - 2
-    - 3
-    - 4
-    - 5
-    type: integer
-    x-enum-varnames:
-    - StatusHeuristicAdded
-    - StatusHeuristicDuplicate
-    - StatusHeuristicNotInQueue
-    - StatusHeuristicInQueue
-    - StatusHeuristicProcessing
-    - StatusHeuristicWorkerNotReady
   heuristics.HollowHeuristic:
     properties:
       uid:
         type: string
-    type: object
-  server.ClientHeuristicRequest:
-    properties:
-      children:
-        items:
-          $ref: '#/definitions/heuristics.HollowHeuristic'
-        type: array
-      clusterTypes:
-        items:
-          $ref: '#/definitions/clustering.ClusterType'
-        type: array
-      excludeSpendingGaps:
-        type: boolean
-      parameter:
-        type: string
-      parent:
-        items:
-          $ref: '#/definitions/heuristics.HollowHeuristic'
-        type: array
-      type:
-        type: string
-      uid:
-        type: string
-      useAddressExclusionList:
-        type: boolean
     type: object
   server.addWorkspaceNodeReply:
     properties:
@@ -708,14 +686,8 @@ definitions:
     type: object
   server.getHeuristicExecutionReply.request:
     properties:
-      changed:
-        items:
-          $ref: '#/definitions/server.ClientHeuristicRequest'
-        type: array
-      deleted:
-        items:
-          type: string
-        type: array
+      newHeuristic:
+        $ref: '#/definitions/heuristics.DatabaseHeuristicRequest'
     type: object
   server.getMixingActivity.request:
     properties:
@@ -775,6 +747,11 @@ definitions:
       workspace:
         $ref: '#/definitions/workspace.FrontendWorkspace'
     type: object
+  server.heuristicByWorkIDReply:
+    properties:
+      heuristic:
+        $ref: '#/definitions/heuristics.FrontendHeuristic'
+    type: object
   server.heuristicDescriptorReply:
     properties:
       descriptors:
@@ -789,8 +766,8 @@ definitions:
     type: object
   server.heuristicExecutionReply:
     properties:
-      status:
-        $ref: '#/definitions/heuristics.HeuristicQueueStatus'
+      workID:
+        type: string
     type: object
   server.heuristicListReply:
     properties:
@@ -799,19 +776,12 @@ definitions:
           $ref: '#/definitions/heuristics.HeuristicListItem'
         type: array
     type: object
-  server.heuristicReply:
+  server.heuristicsReply:
     properties:
       heuristics:
         items:
           $ref: '#/definitions/heuristics.FrontendHeuristic'
         type: array
-      status:
-        $ref: '#/definitions/heuristics.HeuristicQueueStatus'
-    type: object
-  server.heuristicStatusReply:
-    properties:
-      status:
-        $ref: '#/definitions/heuristics.HeuristicQueueStatus'
     type: object
   server.hmiLookupReply:
     properties:
@@ -1856,7 +1826,7 @@ paths:
       description: This call queues the given heuristics for the given transaction.
         Does not wait until the heuristic execution is finished.
       parameters:
-      - description: "0x123"
+      - description: Transaction hash
         in: path
         name: hash
         required: true
@@ -1931,6 +1901,37 @@ paths:
       summary: Returns the specified workspace
       tags:
       - workspace
+  /heuristicByWorkID/{workID}:
+    get:
+      description: Get a specific heuristic by work ID
+      parameters:
+      - description: heuristic work ID
+        in: path
+        name: workID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/server.heuristicByWorkIDReply'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/server.heuristicByWorkIDReply'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/server.heuristicByWorkIDReply'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/server.heuristicByWorkIDReply'
+      summary: Get a specific heuristic by work ID
+      tags:
+      - heuristic
   /heuristicDescriptors/:
     get:
       description: Returns available heuristic descriptors, which define the heuristic
@@ -1998,38 +1999,12 @@ paths:
       summary: Lists all heuristics of the current user
       tags:
       - heuristic
-  /heuristicStatus/{hash}:
-    get:
-      parameters:
-      - description: "0x123"
-        in: path
-        name: hash
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/server.heuristicStatusReply'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/server.heuristicStatusReply'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/server.heuristicStatusReply'
-      summary: Get the status of all heuristics per transaction
-      tags:
-      - heuristic
   /heuristics/{hash}:
     get:
       description: Get all heuristics defined for a transaction and the current heuristic
         execution status
       parameters:
-      - description: "0x123"
+      - description: Transaction hash
         in: path
         name: hash
         required: true
@@ -2040,19 +2015,19 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/server.heuristicReply'
+            $ref: '#/definitions/server.heuristicsReply'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/server.heuristicReply'
+            $ref: '#/definitions/server.heuristicsReply'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/server.heuristicReply'
+            $ref: '#/definitions/server.heuristicsReply'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/server.heuristicReply'
+            $ref: '#/definitions/server.heuristicsReply'
       summary: Get all heuristics defined for a transaction
       tags:
       - heuristic
